--- a/index2.css
+++ b/index2.css
@@ -82,10 +82,60 @@
     border-top-right-radius: 5px;
 }
 
-#HomeSection .sidebar .social-media a:hover{
-    color:#10A674;
+#HomeSection .sidebar .social-media .fa-instagram:hover{
+    color: #C13584;
     transition: 0.5;
 }
+
+#HomeSection .sidebar .social-media .fa-twitter:hover{
+    color: #00acee;
+    transition: 0.5;
+}
+#HomeSection .sidebar .social-media .fa-linkedin:hover{
+    color: #0072b1;
+    transition: 0.5;
+}
+#HomeSection .sidebar .social-media .fa-github:hover{
+    color: #353a35;
+    transition: 0.5;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+  }
+  
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 70px;
+    font-size: 12px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding:0;
+    position: absolute;
+    z-index: 1;
+    bottom: 150%;
+    left: 50%;
+    margin-left: -60px;
+  }
+  
+  .tooltip .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
 
 #HomeSection .sidebar .burger{
     display: none;
@@ -93,9 +143,10 @@
 
 #HomeSection .sidebar .burger div{
     height: 3px;
-    width:25px;
+    width:23px;
     background-color: #EBEBEB;
     margin: 5px;
+    transition: 0.3s ease;
 }
 
 #HomeSection .main-content{
@@ -271,7 +322,7 @@
     font-weight:500;
 }
 
-#about .middle .credentials .btn {
+#about .middle .credentials .btn{
     background:#14c58a ;
     height:50px;
     width:170px;
@@ -279,6 +330,10 @@
     border-radius:45px;
     padding-top:15px;
     font-weight:600;
+    color:#fff;
+}
+
+#about .middle .credentials .btn a{
     color:#fff;
 }
 
@@ -735,11 +790,12 @@
         background-color: #000;
         opacity:95%;
         padding: 10px;
-        /* transform: translateX(100%); */
+        transform: translateX(100%);
+        transition:  0.5s ;
     }
 
     #HomeSection .sidebar ul.nav-active{
-        transform: translateX(100%);
+        transform: translateX(0%);
     }
    
     #HomeSection .sidebar ul li {
@@ -775,6 +831,18 @@
         cursor:pointer;
         margin-top:5px;
         margin-left: 5px;
+    }
+
+    .toggle .line1 {
+        transform: rotate(-45deg) translate(-5px,6px);
+    }
+
+    .toggle .line2 {
+        opacity: 0;
+    }
+
+    .toggle .line3 {
+        transform: rotate(45deg) translate(-5px,-6px);
     }
     
     #HomeSection .main-content{
