--- a/index2.css
+++ b/index2.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700&display=swap');
-
-*{
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');*{
     margin:0px;
     padding:0px;
     box-sizing:border-box;
     list-style:none;
     text-decoration:none;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -72,7 +71,7 @@
 #HomeSection .sidebar .social-media a{
     display:block;
     width:30px; 
-    background:#121215;
+    /* background:#121215; */
     height:30px;
     line-height: 30px;
     text-align: center;
@@ -82,20 +81,20 @@
     border-top-right-radius: 5px;
 }
 
-#HomeSection .sidebar .social-media .fa-instagram:hover{
+.fa-instagram:hover{
     color: #C13584;
     transition: 0.5;
 }
 
-#HomeSection .sidebar .social-media .fa-twitter:hover{
+.fa-twitter:hover{
     color: #00acee;
     transition: 0.5;
 }
-#HomeSection .sidebar .social-media .fa-linkedin:hover{
+.fa-linkedin:hover{
     color: #0072b1;
     transition: 0.5;
 }
-#HomeSection .sidebar .social-media .fa-github:hover{
+.fa-github:hover{
     color: #353a35;
     transition: 0.5;
 }
@@ -103,10 +102,10 @@
 .tooltip {
     position: relative;
     display: inline-block;
-    border-bottom: 1px dotted black;
+    /* border-bottom: 1px dotted black; */
   }
   
-  .tooltip .tooltiptext {
+.tooltip .tooltiptext {
     visibility: hidden;
     width: 70px;
     font-size: 12px;
@@ -117,12 +116,12 @@
     padding:0;
     position: absolute;
     z-index: 1;
-    bottom: 150%;
-    left: 50%;
+    top: -110%;
+    left: 150%;
     margin-left: -60px;
-  }
-  
-  .tooltip .tooltiptext::after {
+}
+
+.tooltip .tooltiptext::after {
     content: "";
     position: absolute;
     top: 100%;
@@ -131,11 +130,11 @@
     border-width: 5px;
     border-style: solid;
     border-color: black transparent transparent transparent;
-  }
-  
-  .tooltip:hover .tooltiptext {
+}
+
+.tooltip:hover .tooltiptext {
     visibility: visible;
-  }
+}
 
 #HomeSection .sidebar .burger{
     display: none;
@@ -160,7 +159,7 @@
 
 #HomeSection .main-content .centering{
     width:80%;
-    margin-top: 200px;
+    margin-top: 250px;
     margin-left:60px;
     color:#fff;
     display:flex;
@@ -253,7 +252,7 @@
     position:absolute;
     text-align:center;
     width: 40%;
-    margin:3.7% 30%;
+    margin:4.5% 30%;
     font-size:3vw;
     font-weight: 700;
     color: #f3f1f1;
@@ -263,7 +262,7 @@
     position:absolute;
     width: 8vw;
     border-bottom: 3px solid #14c58a;
-    margin:8.7% 45%;
+    margin:9.5% 45%;
 }
 
 #about .middle {
@@ -409,7 +408,7 @@
     position:absolute;
     text-align:center;
     width: 40%;
-    margin:3.9% 30%;
+    margin:4.5% 30%;
     font-size:3vw;
     font-weight: 700;
     color: #f3f1f1;
@@ -419,7 +418,7 @@
     position:absolute;
     width: 8vw;
     border-bottom: 3px solid #14c58a;
-    margin:8.8% 45%;
+    margin:9.5% 45%;
 }
 
 #whatIdo .middle .icon {
@@ -498,7 +497,7 @@
     position:absolute;
     text-align:center;
     width: 40%;
-    margin:3.7% 30%;
+    margin:4.5% 30%;
     font-size:3vw;
     font-weight: 700;
     color: #f3f1f1;
@@ -508,7 +507,7 @@
     position:absolute;
     width: 8vw;
     border-bottom: 3px solid #14c58a;
-    margin:8.7% 45%;
+    margin:9.5% 45%;
 }
 
 #resume .middle {
@@ -595,7 +594,7 @@
     position:absolute;
     text-align:center;
     width: 40%;
-    margin:3.9% 30%;
+    margin:4.5% 30%;
     font-size:3vw;
     font-weight: 700;
     color: #f3f1f1;
@@ -605,7 +604,7 @@
     position:absolute;
     width: 8vw;
     border-bottom: 3px solid #14c58a;
-    margin:8.9% 45%;
+    margin:9.5% 45%;
 }
 
 #contact .middle {
@@ -658,6 +657,7 @@
     color:#8f8e8e;
     font-size: 20px;
     margin-right: 5%;
+    border: none;
 }
 
 #contact .middle .left .soc a:hover {
@@ -790,12 +790,13 @@
         background-color: #000;
         opacity:95%;
         padding: 10px;
-        transform: translateX(100%);
+        transform: translateY(-160%);
         transition:  0.5s ;
     }
 
     #HomeSection .sidebar ul.nav-active{
-        transform: translateX(0%);
+        transform: translateY(0%);
+        z-index: -1;
     }
    
     #HomeSection .sidebar ul li {
@@ -878,13 +879,13 @@
 
     #about .header .over {
         font-size:4vw;
-        margin:4.9% 30%;
+        margin:5.5% 30%;
     }
 
 
     #about .header .line{
         width:10vw;
-        margin:10.7% 45%;
+        margin:11.5% 45%;
     }
 
 
@@ -918,13 +919,13 @@
  
     #whatIdo .header .over {
          font-size:4vw;
-         margin:4.9% 30%;
+         margin:5.5% 30%;
     }
  
  
     #whatIdo .header .line{
          width:10vw;
-         margin:10.7% 45%;
+         margin:11.5% 45%;
     }
 
 
@@ -942,13 +943,13 @@
  
     #resume .header .over {
          font-size:4vw;
-         margin:4.9% 30%;
+         margin:5.5% 30%;
     }
  
  
     #resume .header .line{
          width:10vw;
-         margin:10.7% 45%;
+         margin:11.5% 45%;
     }
 
     /* contact I Do section */
@@ -965,13 +966,13 @@
  
     #contact .header .over {
          font-size:4vw;
-         margin:4.9% 30%;
+         margin:5.5% 30%;
     }
  
  
     #contact .header .line{
          width:10vw;
-         margin:10.7% 45%;
+         margin:11.5% 45%;
     }
 
     #contact .middle {
@@ -982,10 +983,6 @@
         width: 100%;
     }
 }   
-
-.nav-active {
-    transform: translateX(0%);
-}
 
 @media screen and (max-width:500px){
     /* about section */
