--- a/index2.css
+++ b/index2.css
@@ -893,7 +893,7 @@
 
 
 
-@media screen and (max-width:867px){
+@media only screen and (max-device-width:867px){
     /* Home section */
 
     #HomeSection {
@@ -993,8 +993,9 @@
         background:rgba(0, 0, 0, 0.7) url(./Images/christopher-gower-m_HRfLhgABo-unsplash.jpg) no-repeat;
         background-blend-mode: darken;
         background-size: cover;
-        max-width:100%;
-        height:100vh;
+        width:100%;
+        height:100%;
+        padding-bottom: 300px;
     }
     
     #HomeSection .main-content .centering{
@@ -1125,7 +1126,7 @@
     }
 }   
 
-@media screen and (max-width:500px){
+@media only screen and (max-device-width:480px){
     /* about section */
 
     #about .middle .main{
